--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -494,9 +494,11 @@ form{
 
 	.submit{
 		border-radius: 5rem;
+		display: block;
 		font-size: 1.7rem;
 		height: 5rem;
 		margin-top: 2.5rem;
+		text-align: center;
 		width: 16rem;
 	}
 
