--- a/app/scss/_responsive-pages.scss
+++ b/app/scss/_responsive-pages.scss
@@ -64,7 +64,9 @@
 
 
 @media (max-width: 1650px){
-
+	.category__inner{
+		background-size: cover;
+	}
 }
 
 
@@ -94,6 +96,17 @@
 		}
 		.intro:before{
 			left: 25px;
+		}
+	}
+
+
+	// category
+	.category{
+		&__column{
+			width: 90%;
+		}
+		&__num{
+			padding-left: 3.5rem;
 		}
 	}
 
@@ -208,6 +221,20 @@
 			h3{
 				margin-top: 0;
 			}
+		}
+	}
+
+	// category
+	.category{
+		&__num{
+			font-size: 3rem;
+			padding-left: 1.5rem;
+		}
+		&__title{
+			font-size: 2.6rem;
+		}
+		&__text{
+			font-size: 1.5rem;
 		}
 	}
 }
@@ -388,6 +415,20 @@
 			}
 		}
 	}
+
+	// category
+	.category{
+		&__num{
+			font-size: 2.5rem;
+			padding-left: 1.5rem;
+		}
+		&__title{
+			font-size: 2.2rem;
+		}
+		&__text{
+			font-size: 1.4rem;
+		}
+	}	
 }
 
 @media (max-width: 991px){
@@ -640,6 +681,24 @@
 	.news__container{
 		width: 500px;
 	}
+
+	// category
+	.category{
+		&__num{
+			font-size: 2.2rem;
+			padding-left: .5rem;
+		}
+		&__title{
+			font-size: 2rem;
+		}
+		&__text{
+			font-size: 1.3rem;
+		}
+
+		&__desc{
+			padding-bottom: 3rem;
+		}
+	}	
 }
 
 
@@ -831,6 +890,41 @@
 
 	.principles{
 		display: none;
+	}
+
+
+	// homepage
+	.categories .d-flex{
+		display: block;
+	}
+
+	.category{
+		&__column{
+			padding: 2.5rem 1.5rem 0;
+			width: 100%;
+		}
+		&__text{
+			display: none;
+		}
+		&__num span{
+			&:after{
+				top: 12px;
+			}
+		}
+
+		&__desc{
+			display: block;
+			padding-bottom: 0;
+		}
+		&__title{
+			display: block;
+			margin-top: 1rem;
+			text-align: left;
+			min-height: 6rem; 
+			&:after{
+				display: none;
+			}
+		}
 	}
 }
 
