--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -441,6 +441,9 @@ template {
 .justify-content-between {
   justify-content: space-between; }
 
+.justify-content-around {
+  justify-content: space-around; }
+
 .justify-content-center {
   justify-content: center; }
 
@@ -3407,7 +3410,13 @@ aside {
 @media (max-width: 1500px) {
   .groups__wrapper {
     margin-left: 0;
-    width: 100%; } }
+    width: 100%; }
+  .main-contacts {
+    padding: 3rem 0 !important; }
+    .main-contacts .content main h1 {
+      font-size: 5rem; }
+    .main-contacts .content main h3 {
+      font-size: 2.6rem; } }
 
 @media (max-width: 1420px) {
   .homepage .content {
