--- a/app/scss/_grid.scss
+++ b/app/scss/_grid.scss
@@ -38,10 +38,14 @@
 	justify-content: space-between;
 }
 
+.justify-content-around{
+	justify-content: space-around;
+}
+
+
 .justify-content-center{
 	justify-content: center;
 }
-
 
 .justify-content-end{
 	justify-content: flex-end;
