--- a/app/scss/_responsive-pages.scss
+++ b/app/scss/_responsive-pages.scss
@@ -120,6 +120,18 @@
 			width: 100%;
 		}
 	}
+
+	.main-contacts{
+		padding: 3rem 0 !important;
+		.content main{
+			h1{
+				font-size: 5rem;
+			}
+			h3{
+				font-size: 2.6rem;
+			}
+		}
+	}
 }
 
 
