--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1275,6 +1275,12 @@ form .captcha {
   margin-top: 10px;
   margin-bottom: 10px; }
 
+.revealator-once {
+  opacity: 0; }
+
+.overflow {
+  overflow: hidden; }
+
 .secondary-nav {
   background: #00b4a9;
   padding: 1.5rem 0;
