Добавлены увеличенние изображения при наведении на главной и в новостях

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1429,11 +1429,14 @@ aside {
     color: #00feee; }
   .new__link:hover .new__thumb {
     box-shadow: 0 0 15px #00feee; }
+    .new__link:hover .new__thumb img {
+      transform: scale(1.1); }
 
 .new__thumb {
   transition: .3s box-shadow;
   position: relative;
-  z-index: 1; }
+  z-index: 1;
+  overflow: hidden; }
   .new__thumb:before, .new__thumb:after {
     background-color: rgba(0, 180, 170, 0.2);
     width: 100%;
@@ -1447,6 +1450,7 @@ aside {
   .new__thumb img {
     display: block;
     position: relative;
+    transition: transform .3s;
     z-index: 2; }
 
 .new__title {
@@ -1778,9 +1782,14 @@ aside {
     z-index: 2;
     height: 6rem; }
 
+#news-carousel .news__pic {
+  overflow: hidden; }
+
 #news-carousel .news-slide {
   padding: 2rem 0;
   width: 290px; }
+  #news-carousel .news-slide img {
+    transition: transform .3s; }
   #news-carousel .news-slide a {
     padding: 3rem;
     background: #13242b;
@@ -1790,6 +1799,8 @@ aside {
     text-decoration: none; }
     #news-carousel .news-slide a:hover h3 {
       color: #00ffef; }
+    #news-carousel .news-slide a:hover img {
+      transform: scale(1.1); }
   #news-carousel .news-slide h3 {
     font-family: 'proxima_novabold_italic';
     font-size: 1.3rem;
