--- a/app/scss/_homepage.scss
+++ b/app/scss/_homepage.scss
@@ -187,9 +187,15 @@
 
 #news-carousel{
 	.news{
+		&__pic{
+			overflow: hidden;
+		}
 		&-slide{
 			padding: 2rem 0;
 			width: 290px;
+			img{
+				transition: transform .3s;
+			}
 			a{
 				padding: 3rem;
 				background: #13242b;
@@ -200,6 +206,9 @@
 				&:hover{
 					h3{
 						color: $color7;
+					}
+					img{
+						transform: scale(1.1)
 					}
 				}
 			}
