--- a/app/scss/_news.scss
+++ b/app/scss/_news.scss
@@ -22,6 +22,9 @@
 				}
 				&__thumb{
 					box-shadow: 0 0 15px $color14;
+					img{
+						transform: scale(1.1)
+					}
 				}
 			}
 		}
@@ -31,6 +34,7 @@
 		transition: .3s box-shadow;
 		position: relative;
 		z-index: 1;
+		overflow: hidden;
 		&:before,
 		&:after{
 			@extend .before;
@@ -50,6 +54,7 @@
 		img{
 			display: block;
 			position: relative;
+			transition: transform .3s;
 			z-index: 2;
 		}
 	}
