--- a/app/scss/_grid.scss
+++ b/app/scss/_grid.scss
@@ -4,15 +4,15 @@
 }
 
 @for $i from 10  through 1 {
-	$step : 10;
-	.col-#{$i}{width: $step*$i + %;}
-	.col-offset-#{$i}{margin-left: $step*$i + %;}
+	$step : 10%;
+	.col-#{$i}{width: $step*$i;}
+	.col-offset-#{$i}{margin-left: $step*$i;}
 }
 
 
 .col{
 	flex-basis: 0;
-	flex-grow: 1; 
+	flex-grow: 1;
 	max-width: 100%;
 }
 
@@ -65,17 +65,17 @@
 
 @media (min-width: 576px) {
 	@for $i from 10  through 1 {
-		$step : 10;
-		.col-sm-#{$i}{width: $step*$i + %;}
-		.col-sm-offset-#{$i}{margin-left: $step*$i + %;}
+		$step : 10%;
+		.col-sm-#{$i}{width: $step*$i;}
+		.col-sm-offset-#{$i}{margin-left: $step*$i;}
 	}
 }
 
 @media (min-width: 768px) {
 	@for $i from 10  through 1 {
-		$step : 10;
-		.col-md-#{$i}{width: $step*$i + %;}
-		.col-md-offset-#{$i}{margin-left: $step*$i + %;}
+		$step : 10%;
+		.col-md-#{$i}{width: $step*$i;}
+		.col-md-offset-#{$i}{margin-left: $step*$i;}
 	}
 }
 
@@ -92,29 +92,21 @@
 	}
 
 	@for $i from 10  through 1 {
-		$step : 10;
-		.col-lg-#{$i}{width: $step*$i + %;}
-		.col-lg-offset-#{$i}{margin-left: $step*$i + %;}
-	}
-
-}
-
-@media (min-width: 1150px) {
-	.container {
-		// width: 1050px;
+		$step : 10%;
+		.col-lg-#{$i}{width: $step*$i;}
+		.col-lg-offset-#{$i}{margin-left: $step*$i;}
 	}
 }
-
 
 @media (min-width: 1200px) {
 	.container {
 		width: 1100px;
 	}
 	@for $i from 10  through 1 {
-		$step : 10;
-		.col-xl-#{$i}{width: $step*$i + %;}
-		.col-xl-offset-#{$i}{margin-left: $step*$i + %;}
-	}	
+		$step : 10%;
+		.col-xl-#{$i}{width: $step*$i;}
+		.col-xl-offset-#{$i}{margin-left: $step*$i;}
+	}
 }
 
 @media (min-width: 1300px) {
